Move positioning attributes from buttonGroup component to enclosing components

--- a/myreader-frontend/src/templates/subscription.html
+++ b/myreader-frontend/src/templates/subscription.html
@@ -41,7 +41,7 @@
 
     <my-exclusions ng-show="subscription.uuid" subscription="subscription"></my-exclusions>
     <br>
-    <my-button-group>
+    <my-button-group layout="row" layout-align="end center">
         <my-button
                 my-type="primary"
                 my-text="Save"
