--- a/myreader-frontend/src/templates/feed-detail.html
+++ b/myreader-frontend/src/templates/feed-detail.html
@@ -25,7 +25,7 @@
 
     <br>
 
-    <my-button-group>
+    <my-button-group layout="row" layout-align="end center">
         <my-button
                 my-type="primary"
                 my-text="Save"
