--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -4,41 +4,40 @@
     <md-content flex role="navigation">
         <ul class="subscription-tag-menu">
             <li my-hide-admin class="md-2-line" ng-repeat="item in data.tags" class="parent-list-item" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)">
-                <md-button md-no-ink class="md-button-toggle" ng-click="toggleOpen(item)" my-click-broadcast="navigation-close">{{item | navigationItemTitle}}</md-button>
+                <md-button md-no-ink class="md-button-toggle" ng-click="toggleOpen(item.links.entries.route, item.tag)">{{item | navigationItemTitle}}</md-button>
                 <ul ng-show="isOpen(item)" class="menu-toggle-list">
                     <li ng-repeat="subscription in item.subscriptions" ng-hide="subscription.unseen < 1">
                         <md-button md-no-ink
                                    ng-class="{'active' : isSelected(subscription)}"
-                                   ui-sref="app.entries({tag: subscription.tag, uuid: subscription.uuid})"
-                                   my-click-broadcast="navigation-close">
+                                   ng-click="toggleOpen('app.entries', subscription.tag, subscription.uuid)">
                             {{::subscription.title}} ({{subscription.unseen}})
                         </md-button>
                     </li>
                 </ul>
             </li>
-            <li my-hide-admin class="md-2-line" ng-repeat="item in data.subscriptions" class="parent-list-item" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)" my-click-broadcast="navigation-close">
-                <md-button md-no-ink class="md-button-toggle" ng-click="toggleOpen(item)">{{item | navigationItemTitle}}</md-button>
+            <li my-hide-admin class="md-2-line" ng-repeat="item in data.subscriptions" class="parent-list-item" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)">
+                <md-button md-no-ink class="md-button-toggle" ng-click="toggleOpen(item.links.entries.route, item.tag, item.uuid)">{{item | navigationItemTitle}}</md-button>
             </li>
             <li my-hide-admin>
-                <md-button my-click-broadcast="navigation-close navigation-clear-selection" ui-sref="app.subscriptions">subscriptions</md-button>
+                <md-button ng-click="navigateTo('app.subscriptions')">subscriptions</md-button>
             </li>
             <li my-hide-admin>
-                <md-button my-click-broadcast="navigation-close" ui-sref="app.bookmarks">bookmarks</md-button>
+                <md-button ng-click="navigateTo('app.bookmarks')">bookmarks</md-button>
             </li>
             <li my-hide-admin>
-                <md-button my-click-broadcast="navigation-close" ui-sref="app.entries">Stream</md-button>
+                <md-button ng-click="navigateTo('app.entries')">Stream</md-button>
             </li>
             <li my-show-admin>
-                <md-button my-click-broadcast="navigation-close" ui-sref="app.admin">Admin</md-button>
+                <md-button ng-click="navigateTo('app.admin')">Admin</md-button>
             </li>
             <li my-show-admin>
-                <md-button my-click-broadcast="navigation-close" ui-sref="app.feed">Feeds</md-button>
+                <md-button ng-click="navigateTo('app.feed')">Feeds</md-button>
             </li>
             <li my-hide-admin>
-                <md-button my-click-broadcast="navigation-close" ui-sref="app.settings">Settings</md-button>
+                <md-button ng-click="navigateTo('app.settings')">Settings</md-button>
             </li>
             <li class="my-raised" my-hide-admin>
-                <md-button my-click-broadcast="navigation-close navigation-clear-selection" ui-sref="app.subscription-add">Add subscription</md-button>
+                <md-button ng-click="navigateTo('app.subscription-add')">Add subscription</md-button>
             </li>
             <li class="my-warn">
                 <md-button ng-click="logout()">logout</md-button>
