--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -3,8 +3,8 @@
 
     <md-content flex role="navigation">
         <ul class="subscription-tag-menu">
-            <li my-hide-admin class="md-2-line" ng-repeat="item in data.tags" class="parent-list-item" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)">
-                <md-button md-no-ink class="md-button-toggle" ng-click="toggleOpen(item.links.entries.route, item.tag)">{{item | navigationItemTitle}}</md-button>
+            <li my-hide-admin ng-repeat="item in data.tags" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)">
+                <md-button md-no-ink ng-click="toggleOpen(item.links.entries.route, item.tag)">{{item | navigationItemTitle}}</md-button>
                 <ul ng-show="isOpen(item)" class="menu-toggle-list">
                     <li ng-repeat="subscription in item.subscriptions" ng-hide="subscription.unseen < 1">
                         <md-button md-no-ink ng-click="toggleOpen('app.entries', subscription.tag, subscription.uuid)">
@@ -13,8 +13,8 @@
                     </li>
                 </ul>
             </li>
-            <li my-hide-admin class="md-2-line" ng-repeat="item in data.subscriptions" class="parent-list-item" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)">
-                <md-button md-no-ink class="md-button-toggle" ng-click="toggleOpen(item.links.entries.route, item.tag, item.uuid)">{{item | navigationItemTitle}}</md-button>
+            <li my-hide-admin ng-repeat="item in data.subscriptions" ng-class="{'parentActive' : isItemSelected(item)}" ng-show="visible(item)">
+                <md-button md-no-ink ng-click="toggleOpen(item.links.entries.route, item.tag, item.uuid)">{{item | navigationItemTitle}}</md-button>
             </li>
             <li my-hide-admin>
                 <md-button ng-click="navigateTo('app.subscriptions')">subscriptions</md-button>
