--- a/myreader-frontend/src/app/js/entry/entry.component.html
+++ b/myreader-frontend/src/app/js/entry/entry.component.html
@@ -22,7 +22,7 @@
     <div layout="row">
         <my-entry-tags class="my-entry__entry-tags"
                        my-item="$ctrl.item"
-                       my-hide="$ctrl.showMore"
+                       my-show="$ctrl.showMore"
                        my-on-select="$ctrl.onTagUpdate(item)">
         </my-entry-tags>
     </div>
