--- a/myreader-frontend/src/templates/tags.html
+++ b/myreader-frontend/src/templates/tags.html
@@ -1,4 +1,4 @@
-<md-chips placeholder="Enter a tag..." ng-if="hide" ng-model="tags" md-on-add="addTag()" md-on-remove="removeTag()">
+<md-chips placeholder="Enter a tag..." ng-if="show" ng-model="tags" md-on-add="addTag()" md-on-remove="removeTag()">
     <md-chip-template>
         <strong>{{$chip}}</strong>
     </md-chip-template>
