--- a/myreader-frontend/src/templates/subscription-entries.html
+++ b/myreader-frontend/src/templates/subscription-entries.html
@@ -1,16 +1,13 @@
 <md-subheader class="md-primary my-subheader">
     <div layout="row" layout-align="center end" layout-wrap>
         <div flex="85" flex-md="95" flex-sm="95" flex-xs="92">
-            <md-input-container class="md-block my-input-container">
-                <md-icon md-font-library="material-icons">search</md-icon>
-                <input class="my-input"
-                       name="search"
-                       ng-model-options="{ debounce: 250 }"
-                       ng-model="search"
-                       aria-label="search">
-            </md-input-container>
+            <my-search-input
+                    my-value="search"
+                    my-on-change="onSearchChange(value)"
+                    my-on-clear="onSearchClear()">
+            </my-search-input>
         </div>
-        <div flex="15" flex-md="5" flex-sm="5" flex-xs="8">
+        <div flex="15" flex-md="5" flex-sm="5" flex-xs="8" layout-wrap>
             <div layout="row" layout-align="end center">
                 <div>
                     <md-button hide show-gt-md aria-label="photo" class="md-icon-button" ng-click="up()">
