Replace targetBlank filter with myEntryContentSanitizer.

--- a/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
@@ -1,4 +1,5 @@
 <div class="my-entry-content"
      ng-if="$ctrl.showEntryContent()"
-     ng-bind-html="$ctrl.item.content | targetBlank">
+     ng-bind-html="$ctrl.item.content"
+     my-entry-content-sanitizer>
 </div>
