Convert myEntryTags directive to component.

--- a/myreader-frontend/src/app/js/entry/entry.component.html
+++ b/myreader-frontend/src/app/js/entry/entry.component.html
@@ -23,7 +23,7 @@
         <my-entry-tags class="my-entry__entry-tags"
                        my-item="$ctrl.item"
                        my-show="$ctrl.showMore"
-                       my-on-select="$ctrl.onTagUpdate(item)">
+                       my-on-change="$ctrl.onTagUpdate(tag)">
         </my-entry-tags>
     </div>
 
