Remove unused class my-tag-chips from subscription exclusion component html template.

--- a/myreader-frontend/src/app/js/subscription/subscription-exclusion/subscription-exclusion.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-exclusion/subscription-exclusion.component.html
@@ -1,5 +1,4 @@
-<md-chips class="my-tag-chips"
-          ng-model="$ctrl.exclusions"
+<md-chips ng-model="$ctrl.exclusions"
           md-on-remove="$ctrl.onRemove($chip)"
           md-transform-chip="$ctrl.onTransform($chip)">
     <md-chip-template>
