Move exclusionService to subscription exclusion component.

--- a/myreader-frontend/src/app/js/subscription/subscription-exclusion/subscription-exclusion.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-exclusion/subscription-exclusion.component.html
@@ -1,4 +1,9 @@
-<md-chips ng-model="$ctrl.exclusions"
+<p ng-if="$ctrl.loading">Loading exclusion patterns...</p>
+
+<md-chips placeholder="{{$ctrl.placeholder()}}"
+          ng-if="!$ctrl.loading"
+          readonly="$ctrl.isDisabled()"
+          ng-model="$ctrl.exclusions"
           md-on-remove="$ctrl.onRemove($chip)"
           md-transform-chip="$ctrl.onTransform($chip)">
     <md-chip-template>
