--- a/myreader-frontend/src/templates/feed-detail.html
+++ b/myreader-frontend/src/templates/feed-detail.html
@@ -43,21 +43,6 @@
     <my-notification-panel layout="row" layout-align="end center" my-message="message"></my-notification-panel>
 </form>
 
-<h2 ng-hide="feed.errors.length === 0">
-    <span>Fetch errors in the last {{::feed.errors[0].retainDays}} day(s)</span>
-
-    <md-icon md-font-library="material-icons" class="my-pointer" ng-click="refresh()">refresh</md-icon>
-</h2>
-<md-list>
-    <md-list-item md-no-ink class="md-3-line" ng-repeat="error in errors">
-        <div class="md-list-item-text">
-            <div>
-                <p>{{::error.message}}</p>
-                <p>
-                    {{::error.createdAt | timeago}}
-                </p>
-            </div>
-        </div>
-        <md-divider></md-divider>
-    </md-list-item>
-</md-list>
+<div>
+    <my-feed-fetch-error-panel ng-if="feed" my-id="feed.uuid" my-on-error="onError(error)"></my-feed-fetch-error-panel>
+</div>
