--- a/myreader-frontend/src/app/js/feed/feed-fetch-error-panel/feed-fetch-error-panel.component.html
+++ b/myreader-frontend/src/app/js/feed/feed-fetch-error-panel/feed-fetch-error-panel.component.html
@@ -1,13 +1,15 @@
 <h2 class="md-title">Fetch errors
-    <md-icon class="fetch-errors-panel__pointer"
-             md-font-library="material-icons"
+    <my-icon class="fetch-errors-panel__pointer"
+             my-type="expand-less"
              ng-click="$ctrl.close()"
-             ng-if="$ctrl.showErrors">expand_less</md-icon>
+             ng-if="$ctrl.showErrors">
+    </my-icon>
 
-    <md-icon class="fetch-errors-panel__pointer"
-             md-font-library="material-icons"
+    <my-icon class="fetch-errors-panel__pointer"
+             my-type="expand-more"
              ng-click="$ctrl.open()"
-             ng-if="!$ctrl.showErrors">expand_more</md-icon>
+             ng-if="!$ctrl.showErrors">
+    </my-icon>
 </h2>
 
 <my-feed-fetch-error ng-if="$ctrl.firstOpen"
