--- a/myreader-frontend/src/app/js/subscription/subscription-exclusion-panel/subscription-exclusion-panel.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-exclusion-panel/subscription-exclusion-panel.component.html
@@ -1,11 +1,13 @@
 <h2 class="md-title">Patterns to ignore
-    <md-icon md-font-library="material-icons"
+    <my-icon my-type="expand-less"
              ng-click="$ctrl.close()"
-             ng-if="$ctrl.showExclusions">expand_less</md-icon>
+             ng-if="$ctrl.showExclusions">
+    </my-icon>
 
-    <md-icon md-font-library="material-icons"
+    <my-icon my-type="expand-more"
              ng-click="$ctrl.open()"
-             ng-if="!$ctrl.showExclusions">expand_more</md-icon>
+             ng-if="!$ctrl.showExclusions">
+    </my-icon>
 </h2>
 
 <my-subscription-exclusion ng-if="$ctrl.firstOpen"
