--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -1,27 +1,3 @@
-@font-face {
-    font-family: 'Material Icons';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Material Icons'), local('MaterialIcons-Regular'), url('MaterialIcons-Regular.woff2') format('woff2');
-}
-
-.my-a {
-    cursor: pointer;
-}
-
-.material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    -moz-font-feature-settings: 'liga';
-    -moz-osx-font-smoothing: grayscale;
-}
-
 ul {
     margin: 0;
     padding: 0;
@@ -72,11 +48,6 @@ ul li {
 }
 ::-moz-focus-inner {
     border:0;
-}
-
-/* TODO */
-#md-progress-linear-wrapper {
-    min-height: 5px;
 }
 
 md-toolbar ~ md-content > my-list {
@@ -192,10 +163,6 @@ my-list-item[ng-class="my-focused"] {
     background-color: rgba(158, 158, 158, 0.2);
 }
 
-.my-pointer {
-    cursor: pointer;
-}
-
 .my-raised {
     background-color: rgb(63,81,181);
     color: rgb(255,255,255);
@@ -215,4 +182,12 @@ my-list-item[ng-class="my-focused"] {
 }
 .my-subheader div:first-child {
     padding: 0;
+}
+
+.my-feed-detail-url-icon {
+    margin: 0;
+    right: 2px;
+    left: auto;
+    position: absolute;
+    top: 8px;
 }
