--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
@@ -1,13 +1,17 @@
 <md-input-container class="md-block my-search-input-container">
-    <md-icon md-font-library="material-icons">search</md-icon>
+    <my-icon class="my-search-input-container__search-icon" my-type="search"></my-icon>
     <input name="search"
+           aria-label="Search"
            ng-model-options="{ debounce: 250 }"
            ng-change="$ctrl.onChange()"
            ng-model="$ctrl.value">
-    <md-icon class="my-search-input-container__button-clear"
-             md-font-library="material-icons"
+
+    <my-icon class="my-search-input-container__button-clear"
+             my-type="clear"
              ng-hide="$ctrl.isEmpty()"
-             ng-click="$ctrl.onClear()">clear</md-icon>
+             ng-click="$ctrl.onClear()">
+    </my-icon>
+
 </md-input-container>
 
 
