--- a/myreader-frontend/src/app/js/subscription/subscription.component.css
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.css
@@ -1,3 +1,8 @@
 .my-subscription__origin-link {
     cursor: pointer;
+    margin: 0;
+    right: 2px;
+    left: auto;
+    position: absolute;
+    top: 8px;
 }
