--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -13,10 +13,10 @@
         <input disabled
                ng-model="$ctrl.subscription.origin">
 
-        <md-icon class="my-subscription__origin-link"
-                 md-font-library="material-icons"
-                 my-safe-opener url="{{$ctrl.subscription.origin}}">open_in_new
-        </md-icon>
+        <my-icon class="my-subscription__origin-link"
+                 my-type="open-in-new"
+                 my-safe-opener url="{{$ctrl.subscription.origin}}">
+        </my-icon>
     </md-input-container>
 
     <my-subscription-tag-panel my-disabled="$ctrl.pendingAction"
