--- a/myreader-frontend/src/templates/navigation-admin.html
+++ b/myreader-frontend/src/templates/navigation-admin.html
@@ -20,7 +20,7 @@
     <md-toolbar hide-gt-md>
         <div class="md-toolbar-tools">
             <md-button class="md-icon-button" hide-gt-md ng-click="openMenu()" aria-label="Menu">
-                <md-icon md-font-library="material-icons">menu</md-icon>
+                <my-icon my-type="menu" my-color="white"></my-icon>
             </md-button>
         </div>
     </md-toolbar>
