--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -3,8 +3,8 @@
         <label>Title</label>
         <input name="title"
                autocomplete="off"
-               my-backend-validation my-validations="validations"
-               ng-model="feed.title">
+               ng-model="$ctrl.feed.title"
+               my-backend-validation my-validations="$ctrl.validations">
 
         <my-validation-message my-form-control="feedForm.title"></my-validation-message>
     </md-input-container>
@@ -13,13 +13,12 @@
         <label>Url</label>
         <input name="url"
                autocomplete="off"
-               ng-model="feed.url"
-               my-backend-validation my-validations="validations">
+               ng-model="$ctrl.feed.url"
+               my-backend-validation my-validations="$ctrl.validations">
 
         <my-icon class="my-feed-detail-url-icon"
                  my-type="open-in-new"
-                 ng-if="feed.url"
-                 my-safe-opener url="{{feed.url}}">
+                 my-safe-opener url="{{$ctrl.feed.url}}">
         </my-icon>
 
         <my-validation-message my-form-control="feedForm.url"></my-validation-message>
@@ -31,23 +30,23 @@
         <my-button
                 my-type="primary"
                 my-text="Save"
-                my-on-click="onSave()"
-                my-on-success="onSuccessSave()"
-                my-on-error="onError(error)">
+                my-on-click="$ctrl.onSave()"
+                my-on-success="$ctrl.onSuccessSave()"
+                my-on-error="$ctrl.onError(error)">
         </my-button>
         <my-button
                 my-type="warn"
                 my-text="Delete"
                 my-confirm="true"
-                my-on-click="onDelete()"
-                my-on-success="onSuccessDelete()"
-                my-on-error="onError(error)">
+                my-on-click="$ctrl.onDelete()"
+                my-on-success="$ctrl.onSuccessDelete()"
+                my-on-error="$ctrl.onError(error)">
         </my-button>
     </my-button-group>
 
-    <my-notification-panel layout="row" layout-align="end center" my-message="message"></my-notification-panel>
+    <my-notification-panel layout="row" layout-align="end center" my-message="$ctrl.message"></my-notification-panel>
 </form>
 
 <div>
-    <my-feed-fetch-error-panel ng-if="feed" my-id="feed.uuid" my-on-error="onError(error)"></my-feed-fetch-error-panel>
+    <my-feed-fetch-error-panel my-id="$ctrl.feed.uuid" my-on-error="$ctrl.onError(error)"></my-feed-fetch-error-panel>
 </div>
