Relocate feed service.

--- a/myreader-frontend/src/templates/feeds.html
+++ b/myreader-frontend/src/templates/feeds.html
@@ -21,7 +21,7 @@
 </md-subheader>
 
 <md-list>
-    <md-list-item ng-click="open(feed)" md-no-ink class="md-2-line" ng-repeat="feed in data.feeds | filter:searchKey">
+    <md-list-item ng-click="open(feed)" md-no-ink class="md-2-line" ng-repeat="feed in feeds | filter:searchKey">
         <div layout="row">
             <div class="md-list-item-text">
                 <div>
